--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,9 @@
 
 <div class="container" [class.is-mobile]="mobileQuery.matches">
-
-  <button mat-raised-button color="primary">Primary</button>
+  <mat-toolbar color="primary" class="toolbar">
+    <button mat-icon-button (click)="snav.toggle()"><mat-icon>menu</mat-icon></button>
+    <h1 class="app-name">FeepWeb</h1>
+  </mat-toolbar>
   <mat-sidenav-container class="sidenav-container"
                          [style.marginTop.px]="mobileQuery.matches ? 56 : 0">
     <mat-sidenav #snav [mode]="mobileQuery.matches ? 'over' : 'side'"
@@ -16,6 +18,7 @@
 
     <mat-sidenav-content>
       <router-outlet></router-outlet>
+    
     </mat-sidenav-content>
   </mat-sidenav-container>
 </div>
