--- a/src/app/modules/participant/participant-manager/participant-manager.component.html
+++ b/src/app/modules/participant/participant-manager/participant-manager.component.html
@@ -12,8 +12,8 @@
                                 <span class="nav-link btn btn-link" (click)="onBack()">
                                     <i class="material-icons btn-default">arrow_back</i>
                                 </span>
-                                <h4 class="card-title" *ngIf="form.value.id">Gerenciamento de participantes - Adicionar</h4>
-                                <h4 class="card-title" *ngIf="!form.value.id">Gerenciamento de participantes - Alterar</h4>
+                                <h4 class="card-title" *ngIf="form.value.code">Gerenciamento de participantes - Adicionar</h4>
+                                <h4 class="card-title" *ngIf="!form.value.code">Gerenciamento de participantes - Alterar</h4>
                             </div>
 
                         </div>
@@ -27,13 +27,13 @@
                                 <div class="col-md-2">
                                     <mat-form-field>
                                         <input type="text" matInput placeholder="Código"
-                                            formControlName="id">
+                                            formControlName="code">
                                     </mat-form-field>
                                 </div>
                                 <div class="col-md-2">
                                     <div class="form-check">
                                         <label class="form-check-label">
-                                            <input class="form-check-input" type="checkbox" formControlName="disabled">
+                                            <input class="form-check-input" type="checkbox" formControlName="status">
                                             Desabilitar
                                             <span class="form-check-sign">
                                                 <span class="check"></span>
@@ -56,15 +56,15 @@
                                 </mat-form-field>
                                 <mat-form-field>
                                     <input matInput
-                                        placeholder="nome"
-                                        formControlName="descriptionLocation" required />
+                                        placeholder="cpfCnpj"
+                                        formControlName="cpfCnpj" required />
                                     <!-- <mat-error *ngIf="isFieldValid(form, 'descriptionLocation')">
                                         {{ 'MODULES.PROJECTS.ROOM.FORM_ERRORS.LOCATION_DESCRIPTION' | translate }}
                                         <strong>{{ 'COMMON.FORM_ERRORS._REQUIRED' | translate }}</strong>
                                     </mat-error> -->
                                 </mat-form-field>
                             </div>
-
+<!-- 
                             <div class="form-group col-md-6">
                                 <div class="form-check">
                                     <label class="form-check-label">
@@ -76,7 +76,7 @@
                                         </span>
                                     </label>
                                 </div>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                 </form>
@@ -84,7 +84,7 @@
                     <div class="col-md-12 text-right">
                         <button mat-raised-button type="button" class="btn btn-fill btn-link btn-default mr-md-3"
                             (click)="onBack()">Cancelar</button>
-                        <button *ngxPermissionsOnly="['ROLE_ROOM_MANAGER', 'ROLE_SAFE_ADMIN']" [disabled]="form.invalid"
+                        <button [disabled]="form.invalid"
                             mat-raised-button type="button" class="btn btn-fill btn-primary" [disabled]="loading"
                             (click)="onSave()">Salvar</button>
                     </div>
