--- a/src/app/modules/participant/participant-search/participant-search.component.html
+++ b/src/app/modules/participant/participant-search/participant-search.component.html
@@ -1,50 +1,50 @@
-<mat-form-field>
+<!-- <mat-form-field>
     <mat-label>Enter your password</mat-label>
     <input matInput [type]="'text'">
     <button mat-icon-button matSuffix [attr.aria-label]="'Hide password'">
         <mat-icon>visibility_off</mat-icon>
     </button>
-</mat-form-field>
-<mat-card>
-    <div class="mat-elevation-z8">
-        <table mat-table [dataSource]="dataSource">
+</mat-form-field> -->
+<!-- <mat-card> -->
+<div class="container mat-elevation-z8">
+    <table mat-table [dataSource]="dataSource">
 
-            <!-- Position Column -->
-            <ng-container matColumnDef="code">
-                <th mat-header-cell *matHeaderCellDef> Código </th>
-                <td mat-cell *matCellDef="let element"> {{element.code}} </td>
-            </ng-container>
+        <!-- Position Column -->
+        <ng-container matColumnDef="code">
+            <th mat-header-cell *matHeaderCellDef> Código </th>
+            <td mat-cell *matCellDef="let element"> {{element.code}} </td>
+        </ng-container>
 
-            <!-- Name Column -->
-            <ng-container matColumnDef="name">
-                <th mat-header-cell *matHeaderCellDef> Nome </th>
-                <td mat-cell *matCellDef="let element"> {{element.name}} </td>
-            </ng-container>
+        <!-- Name Column -->
+        <ng-container matColumnDef="name">
+            <th mat-header-cell *matHeaderCellDef> Nome </th>
+            <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+        </ng-container>
 
-            <!-- Weight Column -->
-            <ng-container matColumnDef="cpfCnpj">
-                <th mat-header-cell *matHeaderCellDef> cpf/Cnpj </th>
-                <td mat-cell *matCellDef="let element"> {{element.cpfCnpj}} </td>
-            </ng-container>
+        <!-- Weight Column -->
+        <ng-container matColumnDef="cpfCnpj">
+            <th mat-header-cell *matHeaderCellDef> cpf/Cnpj </th>
+            <td mat-cell *matCellDef="let element"> {{element.cpfCnpj}} </td>
+        </ng-container>
 
-            <!-- Symbol Column -->
-            <ng-container matColumnDef="phoneNumber">
-                <th mat-header-cell *matHeaderCellDef> Telefone </th>
-                <td mat-cell *matCellDef="let element"> {{element.phoneNumber}} </td>
-            </ng-container>
+        <ng-container matColumnDef="phoneNumber">
+            <th mat-header-cell *matHeaderCellDef> Telefone </th>
+            <td mat-cell *matCellDef="let element"> {{element.phoneNumber}} </td>
+        </ng-container>
 
-            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-        </table>
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
 
-        <mat-paginator [pageSizeOptions]="[5, 10, 20]" (change)="changePage($event)" showFirstLastButtons
-            aria-label="Select page of periodic elements">
-        </mat-paginator>
-    </div>
-    <div class="example-button-row">
-        <button mat-flat-button>Basic</button>
+    <mat-paginator [pageSizeOptions]="[5, 10, 20]" (change)="changePage($event)" showFirstLastButtons
+        aria-label="Select page of periodic elements">
+    </mat-paginator>
+
+
+    <div class="row justify-content-end">
         <button mat-flat-button color="primary">Exportar em PDF</button>
-        <button mat-flat-button [disabled]="" color="accent">Excluir</button>
-        <button mat-flat-button color="warn" routerLink="manager">Adicionar</button>
-      </div>
-</mat-card>
+        <button mat-flat-button [disabled]="" color="primary">Excluir</button>
+        <button mat-flat-button color="primary" (click)="goToManager()">Adicionar</button>
+    </div>
+</div>
+<!-- </mat-card> -->
