--- a/src/app/modules/participant/participant-manager/participant-manager.component.html
+++ b/src/app/modules/participant/participant-manager/participant-manager.component.html
@@ -4,7 +4,7 @@
             <div class="card">
                 <div class="card-header card-header-danger card-header-icon">
                     <div class="row col-12">
-                     <!--    <span class="nav-link btn btn-link" (click)="onBack()">
+                        <!--    <span class="nav-link btn btn-link" (click)="onBack()">
                             <i class="material-icons btn-default">arrow_back</i>
                         </span> -->
                         <h4 class="card-title" *ngIf="form.value.code">Gerenciamento de participantes - Adicionar</h4>
@@ -39,20 +39,10 @@
                             <input matInput placeholder="Email" formControlName="mail" required />
                         </mat-form-field>
 
-                        <div class="col-md-4">
-                            <mat-form-field>
-                              <mat-label>Sexo</mat-label>
-                              <mat-select formControlName="gender" required>
-                                <mat-option *ngFor="let g of genders" [value]="g.value">
-                                  {{g.label}}
-                                </mat-option>
-                              </mat-select>
-                            </mat-form-field>
-                          </div>
-
                         <mat-form-field class="form-group col-3 mr-2">
                             <input matInput placeholder="cpfCnpj" formControlName="cpfCnpj" required />
                         </mat-form-field>
+
                         <div class="col-md-2">
                             <div class="form-check">
                                 <label class="form-check-label">
@@ -65,6 +55,41 @@
                                 </label>
                             </div>
                         </div>
+
+                        <div class="col-md-3">
+                            <mat-form-field>
+                                <mat-label>Sexo</mat-label>
+                                <mat-select formControlName="gender" required>
+                                    <mat-option *ngFor="let g of genders" [value]="g.value">
+                                        {{g.label}}
+                                    </mat-option>
+                                </mat-select>
+                            </mat-form-field>
+                        </div>
+
+                        <div class="col-md-4">
+                            <mat-form-field>
+                                <mat-label>Estado civil</mat-label>
+                                <mat-select formControlName="marital" required>
+                                    <mat-option *ngFor="let g of maritals" [value]="g.value">
+                                        {{g.label}}
+                                    </mat-option>
+                                </mat-select>
+                            </mat-form-field>
+                        </div>
+
+                        <mat-form-field class="form-group col-3 mr-2">
+                            <input matInput placeholder="Conjuge" formControlName="spouse" required />
+                        </mat-form-field>
+
+                        <mat-form-field class="form-group col-3 mr-2">
+                            <input matInput placeholder="Documento" formControlName="document" required />
+                        </mat-form-field>
+
+                        <mat-form-field class="form-group col-3 mr-2">
+                            <input matInput placeholder="Telefone/celular" formControlName="phoneNumber" required />
+                        </mat-form-field>
+                       
 
                         <div class="col-md-2">
                             <div class="form-check">
